# owl-serv

./: .gitignore  Cargo.toml  README.md  drop_all.sql  rust-toolchain.toml  seed.sql  wrangler.toml
application-owl/: Cargo.toml
application-owl/src/: application_errors.rs  input_ports.rs  interactors.rs  lib.rs  output_ports.rs
application-owl/src/dtos/: auth_dto.rs
application-owl/src/interactors/: use_case_auth.rs
core-owl/: Cargo.toml
core-owl/src/: lib.rs
domain-owl/: Cargo.toml
domain-owl/src/: domain_errors.rs  entities.rs  lib.rs  owl_error.rs  repositories.rs  value_objects.rs
domain-owl/src/domain_services/: employee_service.rs
domain-owl/src/entities/: employee_requests.rs
domain-owl/src/entities/auth/: department.rs  employee.rs
domain-owl/src/repositories/: employee_repository.rs
domain-owl/src/value_objects/: department_id.rs  department_name.rs  email_address.rs  employee_email.rs  employee_id.rs  employee_name.rs  employee_password.rs  employee_role.rs  employee_status.rs  parent_department_id.rs
infrastructure-owl/: Cargo.toml
infrastructure-owl/migrations/: 0001_v00001_init_schema.sql  0002_v00002_add_tables.sql  0003_add_session.sql  0004_add_hashed_password.sql  0005_add_email.sql  0006_fk_employee_status.sql  0007_add_employee_name.sql
infrastructure-owl/sql/employee/: delete.sql  find_by_email.sql  find_by_id.sql  save.sql
infrastructure-owl/sql/utils/: insert_date.sql  insert_time.sql  select_date_id.sql  select_time_id.sql
infrastructure-owl/src/: common.rs  infrastructure_errors.rs  lib.rs  repository_impl.rs
infrastructure-owl/src/repository_impl/: employee_repository_impl.rs
presentation-owl/: Cargo.toml
presentation-owl/src/: handlers.rs  lib.rs  presenters.rs  requests.rs
presentation-owl/src/contollers/: auth_controller.rs
presentation-owl/src/handlers/: handle_auth.rs  requests.rs
presentation-owl/src/handlers/requests/: auth_request.rs
presentation-owl/src/presenters/: auth_messages.rs  auth_presenter.rs
