[workspace]
resolver = "3"
members = ["presentation-owl", "core-owl", "application-owl", "domain-owl", "infrastructure-owl"]

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2"
worker = { version = "0.6.0", features = ['http', 'axum'] }
worker-macros = { version = "0.6.0", features = ['http'] }
axum = { version = "0.8.4", default-features = false, features = [
    'json',
    'macros',
] }
tower-service = "0.3"
console_error_panic_hook = { version = "0.1.7" }
reqwest = "0.12.20"
serde = "1"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1.21.3"
dashmap = "6.1.0"
mockall = "0.13.1"
