[package]
name = "domain-owl"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"

[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "1", features = ["serde", "v4", "js"] }
