[package]
name = "presentation-owl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
worker = { workspace = true }
axum = { workspace = true }
tower-service = { workspace = true }
serde = { workspace = true}
application-owl = { path = "../application-owl" }
infrastructure-owl = { path = "../infrastructure-owl" }